@@ -1,3 +1,5 @@
+* Use cost price instead of unit price when cost method is "fixed"
+
 Version 2.2.0 - 2011-10-24
 * Bug fixes (see mercurial logs for details)
 
